LoxSharp/grammar.txt
program		   -> declaration* EOF ;

declaration	   -> funcDecl | varDecl | statement ;

funDecl		   -> "fun" function ;

function	   -> IDENTIFIER "(" parameters? ")" block ;

parameters	   -> IDENTIFIER ( "," IDENTIFIER )* ;

varDecl		   -> "var" IDENTIFIER ( "=" expression )? ";" ;

statement	   -> exprStmt | forStmt | ifStmt | printStmt | returnStmt | whileStmt | block ;

returnStmt	   -> "return" expression? ";" ;

forStmt		   -> "for" "(" ( varDecl | exprStmt | ";" ) expression? ";" expression? ")" statement ;

whileStmt	   -> "while" "(" expression ")" statement ;

ifStmt		   -> "if" "(" expression ")" statement ( "else" statement )? ;

block		   -> "{" declaration* "}" '

printStmt	   -> "print" expression ";" ;

exprStmt	   -> expression ";" ;

expression	   -> assignment ;

assignment	   -> IDENTIFIER "=" assignment | logic_or ;

logic_or	   -> logic_and ( "or" logic_and )* ;

logic_and	   -> equality ( "and" equality )* ;

equality	   -> comparison ( ( "!=" | "==" ) comparison )* ;

comparison	   -> term ( ( ">" | ">=" | "<" | "<=" ) term )* ;

term		   -> factor ( ( "-" | "+" ) factor )* ;

factor		   -> unary ( ( "/" | "*" ) unary )* ;

unary		   -> ( "!" | "-" ) unary | primary ;

call		   -> primary ( "(" arguments? ")" )* ;

arguments	   -> expression ( "," expression )* ;

primary		   -> IDENTIFIER | NUMBER | STRING | "true" | "false" | "nil" | "(" expression ")" ;
